# sw

./: .gitignore  .pylintrc  CODEOWNERS  LICENSE.md  README.md  package.spec  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml
rpm_src/: sw  sw-daemon
src/sw/: __init__.py  cli.py  main.py
src/sw/cmds/: __init__.py  config.py  favorite.py  history.py  next.py  prev.py  queue.py  set.py  status.py  timer.py
src/sw/core/: __init__.py  config.py  history.py  queue.py  timer.py  wallpaper.py
src/sw/utils/: common.py
src/sw_cli/: __init__.py  cli.py  main.py
src/sw_cli/cmds/: config.py  config_cmd.py  favorite.py  favorite_cmd.py  history.py  history_cmd.py  next.py  next_cmd.py  prev.py  prev_cmd.py  queue.py  queue_cmd.py  set.py  set_cmd.py  status.py  status_cmd.py  timer.py  timer_cmd.py
src/sw_cli/core/: __init__.py  client.py  config.py  history.py  queue.py  wallpaper.py
src/sw_cli/history/: manager.py
src/sw_cli/ipc/: __init__.py
src/sw_cli/queue/: __init__.py  errors.py  manager.py
src/sw_cli/systemd/: __init__.py  errors.py  timer.py
src/sw_cli/utils/: __init__.py  common.py  style.py
src/sw_cli/wallpaper/: __init__.py  applier.py  errors.py  selector.py
src/sw_client/: __init__.py  main.py
src/sw_client/cmds/: config.py  favorite.py  history.py  next.py  prev.py  queue.py  set.py  status.py  timer.py
src/sw_client/core/: history.py  queue.py  timer.py  wallpaper.py
src/sw_client/utils/: common.py
src/sw_daemon/: cli.py  main.py
src/sw_lib/: __init__.py  config.py
(+18 files in other folders)
